[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }